testsuite/tests/backpack/should_fail/bkpfail16.stderr
[1 of 2] Processing p
  [1 of 1] Compiling ShouldFail[sig]  ( p/ShouldFail.hsig, nothing )
[2 of 2] Processing q
  Instantiating q
  [1 of 1] Including p[ShouldFail=ghc-internal-0.1.0.0:Data.Bool]
    Instantiating p[ShouldFail=ghc-internal-0.1.0.0:Data.Bool]
    [1 of 1] Compiling ShouldFail[sig]  ( p/ShouldFail.hsig, bkpfail16.out/p/p-5eY9RQ2HKCUHq2O2nooUuG/ShouldFail.o )

bkpfail16.out/p/p-5eY9RQ2HKCUHq2O2nooUuG/../ShouldFail.hi:1:1: error: [GHC-93011]
    • ‘Booly’ is exported by the hsig file, but not exported by the implementing module ‘Data.Bool’
    • While checking that ‘Data.Bool’ implements signature ‘ShouldFail’ in ‘p[ShouldFail=Data.Bool]’.
